--- a/css/top.css
+++ b/css/top.css
@@ -4936,7 +4936,7 @@ textarea.form-control-lg {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
+  z-index: auto;
   padding: 1.25rem 1rem;
 }
 
