--- a/css/mypage.css
+++ b/css/mypage.css
@@ -26,7 +26,6 @@ a #mypage {
 
 /*メニュー*/
 header {
-
     width: 100%;
     height: 60px;
     background-color: rgba(55, 55, 55, 0.98);
@@ -78,7 +77,7 @@ header {
     font-size: 16px;
     text-transform: capitalize;
     color: #ddd;
-
+    z-index: 3;
     opacity: 1;
     transition: 0.5s;
 }
@@ -89,7 +88,7 @@ header {
     margin: 5px 30px;
     opacity: 1;
     transition: 0.5s;
-    z-index: 1;
+    z-index: 3;
 }
 
 .menu-btn:checked ~ .menu a,
@@ -187,7 +186,7 @@ section {
     width:100%;
     text-align: center;
     margin-top: 20px;
-    z-index: 3;
+    z-index: 2;
 }
 .wrapper .container{
     max-width:95%;
@@ -399,4 +398,12 @@ ul.pagination li a {
 /*戻るボタン（userpage）*/
 a#back {
     padding-bottom:20px;
+}
+
+footer {
+    bottom: 0; /* 上部から配置の基準位置を決める */
+    left: 0; /* 左から配置の基準位置を決める */
+    width: 100%; /* フッターの横幅を指定する */
+    height: 150px; /* フッターの高さを指定する */
+    padding:10px; /* フッター内側の余白を指定する(上下左右) */
 }
